trunk/Archive2/0c/c1ef46eceb2536/output
main.cpp:6:23: error: variable or field 'handle_eptr' declared void
 void handle_eptr(std::exception_ptr eptr) // passing by value is ok
                       ^
main.cpp:6:18: error: 'exception_ptr' is not a member of 'std'
 void handle_eptr(std::exception_ptr eptr) // passing by value is ok
                  ^
